apps/rollouts-demo/rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: rollouts-demo
  namespace: rollouts-demo
spec:
  replicas: 5
  strategy:
    canary:
      analysis:
        templates:
        - templateName: success-rate-analysis
        startingStep: 1 # delay starting analysis run until setWeight: 40%
        args:
        - name: ingress-name
          value: rollouts-demo
      steps:
      - setWeight: 20
      - pause: {duration: 2m}
      - setWeight: 40
      - analysis:
          templates:
          - templateName: latency-analysis
          args:
          - name: ingress-name
            value: rollouts-demo
      - setWeight: 60
      - pause: {duration: 3m}
      - setWeight: 80
      - pause: {duration: 5m}
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: rollouts-demo
  template:
    metadata:
      labels:
        app: rollouts-demo
    spec:
      containers:
      - name: rollouts-demo
        image: argoproj/rollouts-demo:blue
        ports:
        - name: http
          containerPort: 8080
          protocol: TCP
        resources:
          requests:
            memory: 32Mi
            cpu: 5m
